<?xml version="1.0"?>
<package>
  <name>image_preprocessing</name>
  <version>0.0.0</version>
  <description>The image_preprocessing package</description>

  <maintainer email="miquel.massot@uib.cat">Miquel Massot</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/image_preprocessing</url>

  <author email="miquel.massot@gmail.com">Miquel Massot</author>


  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>stereo_image_proc</build_depend>

  <run_depend>opencv2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>stereo_image_proc</run_depend>
  <run_depend>image_geometry</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>